@@ -42,19 +42,34 @@
 						<th class="column-icon">&nbsp;</th>
 						<th class="column-table">
 							<f:translate id="table" />
+							<span class="sorting-icon">
+								<core:icon identifier="actions-sort-amount" />
+							</span>
 						</th>
 						<th class="column-description">
 							<f:translate id="description" />
+							<span class="sorting-icon">
+								<core:icon identifier="actions-sort-amount" />
+							</span>
 						</th>
 						<th class="column-priority">
 							<f:translate id="priority" />
+							<span class="sorting-icon">
+								<core:icon identifier="actions-sort-amount" />
+							</span>
 						</th>
 						<th class="column-group">
 							<f:translate id="groups" />
+							<span class="sorting-icon">
+								<core:icon identifier="actions-sort-amount" />
+							</span>
 						</th>
 						<th class="column-actions">&nbsp;</th>
 						<th class="column-autosync">
 							<f:translate id="autosync" />
+							<span class="sorting-icon">
+								<core:icon identifier="actions-sort-amount" />
+							</span>
 						</th>
 						<th class="column-autosync-actions">&nbsp;</th>
 					</tr>
